# HPOmen-linux

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  agents.md  hp-victus-linux-power-wmi-notes.md  implementation.md  log.md  meson.build  plan.md  run-victus-control.sh  test
.opencode/plans/: refactor-separation-of-concerns.md
data/: dev.radhey.VictusControl.desktop.in  dev.radhey.VictusControl.metainfo.xml  dev.radhey.VictusControl.policy  dev.radhey.VictusControl1.conf  dev.radhey.VictusControl1.service.in  io.github.radhey.VictusControl.metainfo.xml  io.github.radhey.VictusControl.policy  io.github.radhey.VictusControl1.conf  io.github.radhey.VictusControl1.service.in  meson.build
mdfiles/: bugfix.md  hp-victus-linux-power-wmi-notes.md  prep.md
src/: meson.build
src/app/: config.vala  controller.vala  css_loader.vala  main.vala  style.css  window.vala
src/app/widgets/: fan_section.vala  hero_section.vala  main_window.vala  overview_section.vala  profile_section.vala  thermal_section.vala  widget_helpers.vala
src/common/: constants.vala  errors.vala  fan_backend.vala  formatting.vala  hardware.vala  models.vala  probe.vala  runtime_paths.vala  service-client.vala  sysfs.vala
src/helper/: auto_policy.vala  control_service.vala  main.vala  service.vala
src/probe/: main.vala
src/tray/: main.vala
